--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<div class="tm-header-inner">
 						<div class="col-md-6 col-12">
 							<div class="tm-site-text-box">
-								<h1 class="tm-site-title">The 15th Kavli Asian Winter School on Strings, Particles and Cosmology</h1>
-								<h6 class="tm-site-description">January 18 - 27, 2021</h6>	
-									<h6 class="tm-site-description">Beijing, China</h6>	
+								<h1 class="tm-site-title">The 1st Soochow-IAS workshop in HEP</h1>
+								<h6 class="tm-site-description">August 8 - 12, 2022</h6>	
+									<h6 class="tm-site-description">Soochow, Jiangsu, China</h6>	
 							</div>
 						</div>
 						<nav class="col-md-6 col-12 tm-nav">
@@ -65,7 +65,7 @@ We are aiming to hold this workshop offline and welcome all the participants in 
 However, due to covid-19 pandemic situation in Soochow city, the workshop might need to hold online if necessary. 
 </p>
 
-<p class="p2">	 The 2021 School is generously supported by Soochow University and by the funds of.</p>
+<p class="p2">	 The 2022 Soochow workshop in High energy physics is generously supported by Soochow University and by the funds of.</p>
 
 <p class="p2">	 The Institute for Advanced Study of Soochow University (SUIAS) is a newly founded research center with the long-term goal in fostering a creative research platform from which young scholars can grow as future academic and technological leaders of China. 
 Prof. John Michael Kosterlitz works as the Honorary Dean of the institute.
